# Projekt

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md
algorithm/: Simulator.cpp  Simulator.h  TrafficEvalOp.cpp  TrafficEvalOp.h  config.xml  main.cpp
data/: config.json  replay_best.sync-conflict-20241231-101615-EVJ36MO.txt  replay_best.txt  replay_best_2.txt
libs/ecf/: CMakeLists.txt
tools/visualizer/: download_replay.py
